--- a/_quarto.yml
+++ b/_quarto.yml
@@ -3,12 +3,13 @@ project:
   output-dir: docs
 
 website:
-  title: "Seanmgard.github.io"
+  title: "Sean Gardner"
   navbar:
     left:
       - href: index.qmd
         text: Home
       - about.qmd
+      - Blog.qmd
 
 format:
   html:
